# TalentStreamAI

./: .env.example  .gitignore  README.md  agentarchitecture.md  deploy.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.lambda.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/schemas/: frontend.py
backend/app/api/v1/: applications.py  auth.py  dashboard.py  endpoints.py  generation.py  job_descriptions.py  observability.py  profile.py  resumes.py
backend/app/core/: auth.py  config.py  db.py  exception_handlers.py  jwks.py  logging_config.py  metrics.py  request_context.py
backend/app/core/db/: __init__.py  postgres_impl.py  sqlite_impl.py
backend/app/middleware/: request_context.py
backend/app/services/: draft_email.py  ingest_resume.py  job_text.py  resume_weave.py  s3_storage.py  tailor_orchestrator.py  text_guardrails.py  uploads.py
backend/app/services/langgraph/: streaming_agent.py  workflow.py
backend/app/services/llm/: client.py  json_parsing.py  safety.py  schemas.py
backend/app/services/observability/: langfuse_tracing.py
backend/docs/: ARCHITECTURE.md
backend/lambda/: lambda_handler.py  requirements-lambda.txt
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: _common.py  bootstrap-tf-state.sh  bootstrap_tf_state.py  build-lambda-zip.sh  deploy-all.sh  deploy-aws.sh  deploy-backend.sh  deploy-frontend.sh  deploy.sh  deploy_all.py  deploy_aws.py  deploy_backend.py  deploy_frontend.py  destroy-aws.sh  destroy.sh  (+14 more)
(+80 files in other folders)
